fix surefire jpms configuration
Signed-off-by: Olivier Lamy <olamy@apache.org>